Adds cursor-behaviour on YupputFindings.

--- a/ytils.yupput-0.9.css
+++ b/ytils.yupput-0.9.css
@@ -85,6 +85,7 @@ div#ytilsYupputFindings {
 div.ytilsYupputFinding {
 
     border-bottom: #b6b6b6 solid 1px;
+    cursor: pointer;
     padding: 10px 5px 10px 5px;
     text-align: left;
 }
