--- a/examples/css/ytils.yupput.examples.css
+++ b/examples/css/ytils.yupput.examples.css
@@ -35,6 +35,31 @@ body {
     text-align: center;
 }
 
+table {
+
+    width: 100%;
+}
+
+table,
+table thead,
+table tbody,
+table tr,
+table th,
+table td {
+
+    border: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin: 0;
+    padding: 5px;
+    text-align: left;
+}
+
+table tbody tr:nth-child(odd) {
+
+    background-color: #DDD;
+}
+
 div.fullLineSpacerOuter {
 
     padding-top: 10px;
