Concrete CSS for the label around input.

--- a/ytils.yupput-0.9.css
+++ b/ytils.yupput-0.9.css
@@ -27,6 +27,14 @@ div#ytilsYupputInputContainerInputContainer {
     padding-right: 55px;
 }
 
+label#ytilsYupputInputLabel {
+
+    display: inline !important;
+    font-weight: normal !important;
+    margin: auto !important;
+    max-width: 100% !important;
+}
+
 input#ytilsYupputInput {
 
     background-color: rgb(247, 247, 247);
